--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -126,6 +126,14 @@
 
             <div class="element usuarios semanal Marzo-2013" >
               <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130321-20130328.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de marzo</p>
+            </div>
+
+            <div class="element usuarios semanal Marzo-2013" >
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130314-20130321.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -240,6 +248,14 @@
 
             <div class="element usuarios quincenal Marzo-2013" >
               <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130315-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de marzo</p>
+            </div>
+
+            <div class="element usuarios quincenal Marzo-2013" >
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130301-20130315.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -296,6 +312,14 @@
 
             <!-- USUARIOS MENSUALES -->
 
+            <div class="element usuarios mensual Marzo-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130301-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 31 de marzo</p>
+            </div>
+
             <div class="element usuarios mensual Febrero-2013" >
               <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130201-20130228.csv">
@@ -305,7 +329,7 @@
             </div>
 
             <div class="element usuarios mensual Enero-2013" >
-              <p> Usuarios</p>
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130101-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -313,7 +337,7 @@
             </div>
 
             <div class="element usuarios mensual Diciembre-2012" >
-              <p> Usuarios</p>
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20121212-20121231.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -321,6 +345,14 @@
             </div>
 
             <!-- POSTS SEMANALES -->
+
+            <div class="element posts semanal Marzo-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130321-20130328.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de marzo</p>
+            </div>
 
             <div class="element posts semanal Marzo-2013" >
               <p>Posts</p>
@@ -438,6 +470,14 @@
 
             <div class="element posts quincenal Marzo-2013" >
               <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130315-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de marzo</p>
+            </div>
+
+            <div class="element posts quincenal Marzo-2013" >
+              <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130301-20130315.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -486,6 +526,14 @@
 
             <!-- POSTS MENSUALES -->
 
+            <div class="element posts mensual Marzo-2013">
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130301-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>1 al 31 de marzo</p>
+            </div>
+
             <div class="element posts mensual Febrero-2013" >
               <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130201-20130228.csv">
@@ -511,6 +559,14 @@
             </div>
 
             <!-- LOGINS SEMANALES -->
+
+            <div class="element logins semanal Marzo-2013" >
+              <p>Logins</p>
+              <a href="http://50.116.21.144/logins-20130321-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 31 de marzo</p>
+            </div>
 
             <div class="element logins semanal Marzo-2013" >
               <p>Logins </p>
@@ -628,6 +684,14 @@
 
             <div class="element logins quincenal Marzo-2013" >
               <p>Logins</p>
+              <a href="http://50.116.21.144/logins-20130315-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de marzo</p>
+            </div>
+
+            <div class="element logins quincenal Marzo-2013" >
+              <p>Logins</p>
               <a href="http://50.116.21.144/logins-20130301-20130315.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -667,7 +731,7 @@
             </div>
 
             <div class="element logins quincenal Diciembre-2012" >
-              <p> Logins</p>
+              <p>Logins</p>
               <a href="http://50.116.21.144/logins-20121215-20121231.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -676,12 +740,20 @@
 
             <!-- LOGINS MENSUALES -->
 
+            <div class="element logins mensual Marzo-2013" >
+              <p>Logins</p>
+              <a href="http://50.116.21.144/logins-20130301-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 31 de marzo</p>
+            </div>
+
             <div class="element logins mensual Febrero-2013" >
               <p>Logins</p>
               <a href="http://50.116.21.144/logins-20130201-20130228.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
-              <p>01 al 28 de enero</p>
+              <p>01 al 28 de febrero</p>
             </div>
 
             <div class="element logins mensual Enero-2013" >
@@ -701,6 +773,14 @@
             </div>
 
             <!-- DISPOSITIVOS SEMANAL -->
+
+            <div class="element dispositivos semanal Marzo-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130321-20130328.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de marzo</p>
+            </div>
 
             <div class="element dispositivos semanal Marzo-2013" >
               <p>Dispositivos</p>
@@ -818,6 +898,14 @@
 
             <div class="element dispositivos quincenal Marzo-2013" >
               <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130315-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de marzo</p>
+            </div>
+
+            <div class="element dispositivos quincenal Marzo-2013" >
+              <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130301-20130315.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -866,8 +954,16 @@
 
             <!-- DISPOSITIVOS MENSUAL -->
 
+            <div class="element dispositivos mensual Marzo-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130301-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 31 de marzo</p>
+            </div>
+
             <div class="element dispositivos mensual Febrero-2013" >
-              <p> Dispositivos</p>
+              <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130201-20130228.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -875,7 +971,7 @@
             </div>
 
             <div class="element dispositivos mensual Enero-2013" >
-              <p> Dispositivos</p>
+              <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130101-20130131.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -883,7 +979,7 @@
             </div>
  
             <div class="element dispositivos mensual Diciembre-2012" >
-              <p> Dispositivos</p>
+              <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20121212-20121231.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -891,6 +987,14 @@
             </div>
 
             <!-- POST/COMENTARIOS SEMANAL -->
+
+            <div class="element post_comentarios semanal Marzo-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130321-20130328.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de marzo</p>
+            </div>
 
             <div class="element post_comentarios semanal Marzo-2013" >
               <p>Post/Comentarios</p>
@@ -1006,6 +1110,14 @@
 
             <!-- POST/COMENTARIOS QUINCENAL -->
 
+            <div class="element post_comentarios quincenal Marzo-2013">
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130315-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de Marzo</p>
+            </div>
+
             <div class="element post_comentarios quincenal Marzo-2013" >
               <p>Post/Comentarios</p>
               <a href="http://50.116.21.144/most_commented-20130301-20130315.csv">
@@ -1055,6 +1167,14 @@
             </div>
 
             <!-- POST/COMENTARIOS MENSUAL -->
+
+            <div class="element post_comentarios mensual Marzo-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130301-20130331.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 31 de marzo</p>
+            </div>
 
             <div class="element post_comentarios mensual Febrero-2013" >
               <p>Post/Comentarios</p>
