Analytics (Reportes semanales)

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -124,6 +124,14 @@
 
             <!-- USUARIOS SEMANAL -->
 
+			<div class="element usuarios semanal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130328-20130404.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>28 de marzo al 4 de Abril</p>
+            </div>
+
             <div class="element usuarios semanal Marzo-2013" >
               <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130321-20130328.csv">
@@ -346,6 +354,14 @@
 
             <!-- POSTS SEMANALES -->
 
+			<div class="element posts semanal Abril-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130328-20130404.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>28 de marzo al 04 de abril</p>
+            </div>
+
             <div class="element posts semanal Marzo-2013" >
               <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130321-20130328.csv">
@@ -560,12 +576,20 @@
 
             <!-- LOGINS SEMANALES -->
 
-            <div class="element logins semanal Marzo-2013" >
+			<div class="element logins semanal Abril-2013" >
               <p>Logins</p>
-              <a href="http://50.116.21.144/logins-20130321-20130331.csv">
+              <a href="http://50.116.21.144/logins-20130328-20130404.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
-              <p>21 al 31 de marzo</p>
+              <p>28 de marzo al 4 de abril</p>
+            </div>
+
+            <div class="element logins semanal Marzo-2013" >
+              <p>Logins</p>
+              <a href="http://50.116.21.144/logins-20130321-20130328.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>21 al 28 de marzo</p>
             </div>
 
             <div class="element logins semanal Marzo-2013" >
@@ -773,6 +797,14 @@
             </div>
 
             <!-- DISPOSITIVOS SEMANAL -->
+
+			<div class="element dispositivos semanal Abril-2013" >
+              <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130328-20130404.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>28 de marzo al 4 de abril</p>
+            </div>
 
             <div class="element dispositivos semanal Marzo-2013" >
               <p>Dispositivos</p>
@@ -987,6 +1019,14 @@
             </div>
 
             <!-- POST/COMENTARIOS SEMANAL -->
+
+			<div class="element post_comentarios semanal Abril-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130328-20130404.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>28 de marzo al 4 de abril</p>
+            </div>
 
             <div class="element post_comentarios semanal Marzo-2013" >
               <p>Post/Comentarios</p>
