--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -126,6 +126,14 @@
 
 			<div class="element usuarios semanal Abril-2013" >
               <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130404-20130411.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>4 al 11 de Abril</p>
+            </div>
+
+			<div class="element usuarios semanal Abril-2013" >
+              <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130328-20130404.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -356,6 +364,14 @@
 
 			<div class="element posts semanal Abril-2013" >
               <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130404-20130411.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>04 al 11 de abril</p>
+            </div>
+
+			<div class="element posts semanal Abril-2013" >
+              <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130328-20130404.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -575,6 +591,14 @@
             </div>
 
             <!-- LOGINS SEMANALES -->
+
+			<div class="element logins semanal Abril-2013" >
+              <p>Logins</p>
+              <a href="http://50.116.21.144/logins-20130404-20130411.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>4 al 11 de abril</p>
+            </div>
 
 			<div class="element logins semanal Abril-2013" >
               <p>Logins</p>
@@ -800,6 +824,14 @@
 
 			<div class="element dispositivos semanal Abril-2013" >
               <p>Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130404-20130411.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>4 al 11 de abril</p>
+            </div>
+
+			<div class="element dispositivos semanal Abril-2013" >
+              <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130328-20130404.csv">
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
@@ -1019,6 +1051,14 @@
             </div>
 
             <!-- POST/COMENTARIOS SEMANAL -->
+
+			<div class="element post_comentarios semanal Abril-2013" >
+              <p>Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130404-20130411.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>4 al 11 de abril</p>
+            </div>
 
 			<div class="element post_comentarios semanal Abril-2013" >
               <p>Post/Comentarios</p>
