--- a/app/views/comments/_comment_tpl.html.erb
+++ b/app/views/comments/_comment_tpl.html.erb
@@ -37,9 +37,13 @@
         <% if comment.assets.any? %>
         <p>
         <% comment.assets.each do |asset| %>
-          <%= image_tag asset.file.thumb_url %>
-		  <%=  render :partial => 'shared/document_viewer', :locals => { :asset => asset }  %>
-		  <a data-toggle="modal" href="#modal-asset-<%= asset.id %>"><%= asset.name %> </a><br />
+          <% if image_tag asset.file.to_s.match /\.(png|gif|jpg)$/i %>
+            <%= image_tag asset.file %>
+          <% else %>
+            <%= image_tag asset.file.thumb_url %>
+			<%=  render :partial => 'shared/document_viewer', :locals => { :asset => asset }  %>
+			<a data-toggle="modal" href="#modal-asset-<%= asset.id %>"><%= asset.name %> </a><br />
+		  <% end %>
         <% end %>
         </p>
              
