pruebas con imagenes

--- a/app/views/comments/_comment_tpl.html.erb
+++ b/app/views/comments/_comment_tpl.html.erb
@@ -38,7 +38,8 @@
         <p>
         <% comment.assets.each do |asset| %>
           <% if image_tag asset.file.to_s.match /\.(png|gif|jpg)$/i %>
-            <%= image_tag asset.file %>
+			<% puts "#{asset.file.to_s}" %>
+            <%= image_tag asset.file.to_s %>
           <% else %>
             <%= image_tag asset.file.thumb_url %>
 			<%=  render :partial => 'shared/document_viewer', :locals => { :asset => asset }  %>
