--- a/app/views/comments/_comment_tpl.html.erb
+++ b/app/views/comments/_comment_tpl.html.erb
@@ -38,7 +38,7 @@
         <p>
         <% comment.assets.each do |asset| %>
           <% if image_tag asset.file.to_s.match /\.(png|gif|jpg)$/i %>
-			<% puts "#{asset.file.to_s}" %>
+			<%= asset.file.to_s %>
           <% else %>
             <%= image_tag asset.file.thumb_url %>
 			<%=  render :partial => 'shared/document_viewer', :locals => { :asset => asset }  %>
