se agrega prueba

--- a/app/views/comments/_comments_tpl.html.erb
+++ b/app/views/comments/_comments_tpl.html.erb
@@ -38,7 +38,8 @@
         <% if comment.assets.any? %>
         <p style="padding-top:10px;">
         <% comment.assets.each do |asset| %>
-          <% if image_tag asset.file.to_s.match /\.(png|gif|jpg)$/i %>
+          <% if image_tag asset.file_url.match /\.(png|gif|jpg)$/i %>
+			<%= asset.file_url %>
             <%= image_tag asset.file_url %>
           <% else %>
             <%= image_tag asset.file.thumb_url %>
