--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,7 +2,7 @@
 <%else%>
 <%= semantic_form_for Comment.new, :remote => true, :url => polymorphic_path(commentable, :action => 'comment') do |form| %>
   <%= form.inputs :text do %>
-    <%= form.input :text, :label => false, :input_html => {:rows => 3, :class => "textarea-size"} %>
+    <%= form.input :text, :label => false, :input_html => {:rows => 3, :class => "textarea-size"}%>
   <% end %>
   
   <%= form.buttons do %>
@@ -10,3 +10,48 @@
   <% end %>
 <% end %>
 <%end%>
+<script>
+  $(function () {
+  	var textAreaField = $('#comment_text'),
+  		textAreaFieldValue, search = false,
+  		setValueOnTextAreaField;
+
+  		setValueOnTextAreaField= function(event, ui){
+  			var usuario = ui.item.first_name +' '+ ui.item.last_name,
+  				comentario = textAreaFieldValue.split('@');
+  				comentario[1]= usuario;			
+  			textAreaField.val(comentario.join(' '));
+  			search = false;
+
+  			// preparar para notificacione
+
+
+  			return false;
+  		};
+
+	textAreaField.autocomplete({
+            source: "/search_users",
+            minLength: 2,
+            delay: 500,
+            select: setValueOnTextAreaField,
+            search:function (ev,obj) {
+            	return search;
+            },
+            focus: setValueOnTextAreaField
+        }).data("autocomplete")._renderItem = function (ul, item) {
+            return $("<li></li>").data("item.autocomplete", item).append(
+                '<a>'+ item.first_name +' '+ item.last_name + '</a>').appendTo(ul);
+        };
+    
+    textAreaField.on('keyup',function(){
+       	var name;
+        textAreaFieldValue = textAreaField.val();
+        name = textAreaFieldValue.split('@');
+        console.log('keyup');
+        if(name[1]){
+            $("#comment_text").autocomplete( "search", name[1]);
+            search = true;
+        }
+    });
+ });
+</script>
