--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -16,30 +16,30 @@
   		textAreaFieldValue, search = false,
   		setValueOnTextAreaField;
 
+    var enviar = false;
+
 		notificationUsers = [];
 
-  		setValueOnTextAreaField= function(event, ui){
-  			var usuario = '<a href="/users/' + ui.item.id + '">' + ui.item.first_name +' '+ ui.item.last_name + '</a>',
+  		setValueOnTextAreaField = function(event, ui){        
+        var usuario = ui.item.first_name +' '+ ui.item.last_name,
   				comentario = textAreaFieldValue.split('@');
   				comentario[1]= usuario;			
   			textAreaField.val(comentario.join(' '));
   			search = false;
 
-			// preparar para notificacione
-			console.log('user_tag: { user_id: ' + ui.item.id + ', notificationUsers: ' + notificationUsers + ' }'); 
-			notificationUsers.push(ui.item.id);
-
-  			return false;
+        // preparar para notificacione
+        notificationUsers.push([ui.item.id, ui.item.first_name +' '+ ui.item.last_name]);
+        console.log('[DEBUG] notificationUsers: [' + notificationUsers + ']');
+        return false;
   		};
 
 	textAreaField.autocomplete({
             source: "/search_users",
-            minLength: 2,
-            delay: 500,
+            minLength: 3,
+            delay:  500,
             select: setValueOnTextAreaField,
-            search:function (ev,obj) {
-            	return search;
-            },
+            //search: function (event, ui) { return search; },
+            focus:  function (event, ui) { return false; }
         }).data("autocomplete")._renderItem = function (ul, item) {
             return $("<li></li>").data("item.autocomplete", item).append(
                 '<a>'+ item.first_name +' '+ item.last_name + '</a>').appendTo(ul);
@@ -48,12 +48,39 @@
     textAreaField.on('keyup',function(){
        	var name;
         textAreaFieldValue = textAreaField.val();
+
+        notificationUsers.forEach(
+          function(array) { 
+            if (textAreaFieldValue.match(array[1]) == null) {
+              notificationUsers.splice(notificationUsers.indexOf(array),1);
+            }
+          }
+        );
+
         name = textAreaFieldValue.split('@');
-        console.log('keyup');
         if(name[1]){
             $("#comment_text").autocomplete( "search", name[1]);
             search = true;
         }
     });
+
+    $('#new_comment').on('submit', function(e) {
+      return enviar;
+    });
+
+    $('input.btn.right.create').click(
+      function(){
+        var comment = $('#comment_text').val();
+        notificationUsers.forEach(function(array) {
+          comment = comment.replace(array[1], '<a href="/users/' + array[0] + '">' + array[1] + '</a>');
+        });
+        $('#comment_text').val(comment); 
+        enviar = true;
+        $('#new_comment').submit();
+        enviar = false;
+        //console.log('textAreaFieldValue => ' + $('#comment_text').val());
+      }
+    );
+
  });
 </script>
