--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -22,6 +22,13 @@ var txtarea;
     });    
     notificationUsers = [];
 <%end%>
+<% @comment.text.scan(/href="\/users\/[0-9]+/).each do |str| %>
+    <% sub_str = str %>
+    <% sub_str.slice! 'href="/users/' %>
+    <% if !User.find_by_id(sub_str).nil? %>
+        <% Notification.create :user => User.find_by_id(sub_str), :notificator => @comment, :kind => 'user_mention_in_comment' %>
+    <% end %>
+<% end %>
 txtarea.val('');
 $('#comment_<%= @comment.id %>').fadeOut();
 $('#comment_<%= @comment.id %>').fadeIn();
