Analytics semanales/mensuales/quincenales

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -122,7 +122,39 @@
 
           <div id="reportes-container" class="clearfix">
 
-            <!-- USUARIOS SEMANAL -->
+      <!-- USUARIOS SEMANAL -->
+
+      <div class="element usuarios semanal Mayo-2013" >
+        <p>Usuarios</p>
+        <a href="http://50.116.21.144/users-20130425-20130502.csv">
+          <img src="/assets/report.png" alt="Image" width="64px"/>
+        </a>
+        <p>25 de Abril al 2 de Mayo</p>
+      </div>
+
+      <div class="element usuarios semanal Abril-2013" >
+        <p>Usuarios</p>
+        <a href="http://50.116.21.144/users-20130418-20130425.csv">
+          <img src="/assets/report.png" alt="Image" width="64px"/>
+        </a>
+        <p>18 al 25 de Abril</p>
+      </div>
+
+      <div class="element usuarios semanal Abril-2013" >
+        <p>Usuarios</p>
+        <a href="http://50.116.21.144/users-20130418-20130425.csv">
+          <img src="/assets/report.png" alt="Image" width="64px"/>
+        </a>
+        <p>18 al 25 de Abril</p>
+      </div>
+
+      <div class="element usuarios semanal Abril-2013" >
+        <p>Usuarios</p>
+        <a href="http://50.116.21.144/users-20130411-20130418.csv">
+          <img src="/assets/report.png" alt="Image" width="64px"/>
+        </a>
+        <p>11 al 18 de Abril</p>
+      </div>
 
 			<div class="element usuarios semanal Abril-2013" >
               <p>Usuarios</p>
@@ -262,6 +294,22 @@
 
             <!-- USUARIOS QUINCENALES -->
 
+            <div class="element usuarios quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130415-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 30 de abril</p>
+            </div>
+
+            <div class="element usuarios quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130401-20130415.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de abril</p>
+            </div>
+
             <div class="element usuarios quincenal Marzo-2013" >
               <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130315-20130331.csv">
@@ -328,6 +376,14 @@
 
             <!-- USUARIOS MENSUALES -->
 
+            <div class="element usuarios mensual Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/users-20130401-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 30 de abril</p>
+            </div>
+
             <div class="element usuarios mensual Marzo-2013" >
               <p>Usuarios</p>
               <a href="http://50.116.21.144/users-20130301-20130331.csv">
@@ -361,6 +417,30 @@
             </div>
 
             <!-- POSTS SEMANALES -->
+
+            <div class="element posts semanal Mayo-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130425-20130502.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>25 de abril al 02 de mayo</p>
+            </div>
+
+            <div class="element posts semanal Abril-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130418-20130425.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>18 al 25 de abril</p>
+            </div>
+
+            <div class="element posts semanal Abril-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/posts-20130411-20130418.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>11 al 18 de abril</p>
+            </div>
 
 			<div class="element posts semanal Abril-2013" >
               <p>Posts</p>
@@ -498,7 +578,23 @@
               <p>13 al 20 de diciembre</p>
             </div>
 
-            <!-- POSTS QUINCENALES -->
+            <!-- POSTS QUINCENALES -->+
+
+             <div class="element posts quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/posts-20130415-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 30 de abril</p>
+            </div>
+
+            <div class="element posts quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/posts-20130401-20130415.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de abril</p>
+            </div>
 
             <div class="element posts quincenal Marzo-2013" >
               <p>Posts</p>
@@ -558,6 +654,14 @@
 
             <!-- POSTS MENSUALES -->
 
+            <div class="element posts mensual Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/posts-20130401-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 30 de abril</p>
+            </div>
+
             <div class="element posts mensual Marzo-2013">
               <p>Posts</p>
               <a href="http://50.116.21.144/posts-20130301-20130331.csv">
@@ -591,6 +695,30 @@
             </div>
 
             <!-- LOGINS SEMANALES -->
+
+            <div class="element logins semanal Mayo-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/logins-20130425-20130502.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>25 de abril al 02 de mayo</p>
+            </div>
+
+            <div class="element logins semanal Abril-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/logins-20130418-20130425.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>18 al 25 de abril</p>
+            </div>
+
+            <div class="element logins semanal Abril-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/logins-20130411-20130418.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>11 al 18 de abril</p>
+            </div>
 
 			<div class="element logins semanal Abril-2013" >
               <p>Logins</p>
@@ -730,6 +858,22 @@
 
             <!-- LOGINS QUINCENALES -->
 
+            <div class="element logins quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/logins-20130415-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 30 de abril</p>
+            </div>
+
+            <div class="element logins quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/logins-20130401-20130415.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de abril</p>
+            </div>
+
             <div class="element logins quincenal Marzo-2013" >
               <p>Logins</p>
               <a href="http://50.116.21.144/logins-20130315-20130331.csv">
@@ -788,6 +932,14 @@
 
             <!-- LOGINS MENSUALES -->
 
+            <div class="element logins mensual Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/logins-20130401-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 30 de abril</p>
+            </div>
+
             <div class="element logins mensual Marzo-2013" >
               <p>Logins</p>
               <a href="http://50.116.21.144/logins-20130301-20130331.csv">
@@ -821,6 +973,30 @@
             </div>
 
             <!-- DISPOSITIVOS SEMANAL -->
+
+            <div class="element dispositivos semanal Mayo-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/devices-20130425-20130502.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>25 de abril al 02 de mayo</p>
+            </div>
+
+            <div class="element dispositivos semanal Abril-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/devices-20130418-20130425.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>18 al 25 de abril</p>
+            </div>
+
+            <div class="element dispositivos semanal Abril-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/devices-20130411-20130418.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>11 al 18 de abril</p>
+            </div>
 
 			<div class="element dispositivos semanal Abril-2013" >
               <p>Dispositivos</p>
@@ -959,6 +1135,21 @@
             </div>
 
             <!-- DISPOSITIVOS QUINCENAL -->
+            <div class="element dispositivos quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/dispositivos-20130415-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 30 de abril</p>
+            </div>
+
+            <div class="element dispositivos quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/dispositivos-20130401-20130415.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de abril</p>
+            </div>
 
             <div class="element dispositivos quincenal Marzo-2013" >
               <p>Dispositivos</p>
@@ -1018,6 +1209,14 @@
 
             <!-- DISPOSITIVOS MENSUAL -->
 
+            <div class="element dispositivos mensual Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/dispositivos-20130401-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 30 de abril</p>
+            </div>
+
             <div class="element dispositivos mensual Marzo-2013" >
               <p>Dispositivos</p>
               <a href="http://50.116.21.144/devices-20130301-20130331.csv">
@@ -1051,6 +1250,30 @@
             </div>
 
             <!-- POST/COMENTARIOS SEMANAL -->
+
+            <div class="element post_comentarios semanal Mayo-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/most_commented-20130425-20130502.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>25 de abril al 02 de mayo</p>
+            </div>
+
+            <div class="element post_comentarios semanal Abril-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/most_commented-20130418-20130425.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>18 al 25 de abril</p>
+            </div>
+
+            <div class="element post_comentarios semanal Abril-2013" >
+              <p>Posts</p>
+              <a href="http://50.116.21.144/most_commented-20130411-20130418.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>11 al 18 de abril</p>
+            </div>
 
 			<div class="element post_comentarios semanal Abril-2013" >
               <p>Post/Comentarios</p>
@@ -1190,6 +1413,22 @@
 
             <!-- POST/COMENTARIOS QUINCENAL -->
 
+            <div class="element post_comentarios quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/most_commented-20130415-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 30 de abril</p>
+            </div>
+
+            <div class="element post_comentarios quincenal Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/most_commented-20130401-20130415.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de abril</p>
+            </div>
+
             <div class="element post_comentarios quincenal Marzo-2013">
               <p>Post/Comentarios</p>
               <a href="http://50.116.21.144/most_commented-20130315-20130331.csv">
@@ -1247,6 +1486,14 @@
             </div>
 
             <!-- POST/COMENTARIOS MENSUAL -->
+
+            <div class="element post_comentarios mensual Abril-2013" >
+              <p>Usuarios</p>
+              <a href="http://50.116.21.144/most_commented-20130401-20130430.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 30 de abril</p>
+            </div>
 
             <div class="element post_comentarios mensual Marzo-2013" >
               <p>Post/Comentarios</p>
